--- a/mysite07/frontend/src/assets/scss/component/modal/modal.scss
+++ b/mysite07/frontend/src/assets/scss/component/modal/modal.scss
@@ -1,5 +1,5 @@
 .Modal {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -22,7 +22,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 1.0em;
-    text-align: left;
+    text-align: center;
   }
 
   div {
